--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-this is the code and rawdata for Empirical Study of Quantitive Trading Strategy based on Historical Stock Performance
+This is the code and rawdata for Empirical Study of Quantitive Trading Strategy based on Historical Stock Performance
+You can find the code at the folder "Code"
+You can find the rawdata at the folder "Rawdata"
